2000-08-09  Kevin Buettner  <kevinb@redhat.com>

	* core-sol2.c (fetch_core_registers): Protoize; add prefatory
	comment.
	* corefile.c (specify_exec_file_hook, generic_search): Protoize.

2000-08-09  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* blockframe.c (sigtramp_saved_pc): Use dynamic allocation, 
	since TARGET_PTR_BIT is no longer a constant (MULTI_ARCH).
	* irix4-nat.c (get_longjmp_target): Ditto.
	* irix5-nat.c (get_longjmp_target): Ditto.
	* jv-valprint.c (java_value_print): Ditto.
	* m3-nat.c (get_cprocs):            Ditto.
	* m68k-tdep.c (get_longjmp_target): Ditto.
	* mips-nat.c  (get_longjmp_target): Ditto.
	* mipsv4-nat.c(get_longjmp_target): Ditto.
	* pa64solib.c (read_dynamic_info):  Ditto.
	* solib.c (elf_locate_base):        Ditto.

Mon Aug  7 23:21:22 2000  David Taylor  <taylor@texas.cygnus.com>

	* TODO: remove build_parse entry.

2000-08-07  Kevin Buettner  <kevinb@redhat.com>

	* command.c (add_cmd, add_abbrev_cmd, add_prefix_cmd, 
	add_abbrev_prefix_cmd): Protoize.

2000-08-07  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* objfiles.h (SECT_OFF_BSS): Don't detect invalid sect_index_bss
 	here, let the users of the macro do it.
	* symtab.h (ANOFFSET): Detect here if the section index is not
 	initialized.
	* xcoffread.c (find_targ_sec): Don't treat .bss as special,
 	because some objfiles may not have that section at all.
	* coffread.c (cs_to_section): Ditto.
	* elfread.c (elf_symtab_read): Detect an uninitialized index
 	value.
	(elfstab_offset_sections): The macro ANOFFSET cannot be used as an
 	lvalue anymore.
	* remote.c (get_offsets, remote_cisco_objfile_relocate): Don't use
 	ANOFFSET as an lvalue.
	* objfiles.c (objfile_relocate, objfile_relocate): Don't use
 	ANOFFSET as an lvalue.
	* symfile.c (default_symfile_offsets): Don't use ANOFFSET as an
 	lvalue.

Mon Aug  7 10:24:30 2000  David Taylor  <taylor@texas.cygnus.com>

	* parse.c (build_parse): don't write off the end of the std_regs
 	array.
